<resources>
    <string name="app_name">APP Test</string>
    <string name="todo">TODO</string>
    <string name="salir">Salir</string>
    <string name="comenzar_analisis">Comenzar analisis</string>
    <string name="app_desarrollada_con_el_prop_sito_de_ayudar_en_la_detecci_n_de_sustancias">App desarrollada con el propósito de ayudar en la detección de sustancias</string>
    <string name="cargar_imagen">Cargar Imagen</string>
    <string name="gestionar_imagen">GESTIONAR IMAGEN</string>
    <string name="pasar_a_test">Pasar a Test</string>
    <string name="volver">Volver</string>
    <string name="muestra_marckis">Muestra Marckis</string>
    <string name="radiobutton">RadioButton</string>
    <string name="no_reaction">NO REACTION</string>
    <string name="pasar_a_mecke">Pasar a Mecke</string>
    <string name="pasar_a_mandelin">Pasar a Mandelin</string>
    <string name="muestra_mecke">Muestra Mecke</string>
    <string name="muestra_simon">Muestra Simon</string>
    <string name="pasar_a_simon">Pasar a Simon</string>
    <string name="muestra_mandelin">Muestra Mandelin</string>
    <string name="registrar_muestra">Registrar Muestra</string>
    <string name="textview">TextView</string>
    <string name="resultados">Resultados</string>
    <string name="r">R</string>
    <string name="b">B</string>
    <string name="g">G</string>
    <string name="mandelin">Mandelin</string>
    <string name="simon">Simon</string>
    <string name="mecke">Mecke</string>
    <string name="marckis">Marckis</string>
    <string name="boton">boton</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="muestra">Muestra</string>
    <string name="coincidencias">Coincidencias</string>
    <string name="capture">CAPTURE</string>
    <string name="nueva_muestra">Nueva Muestra</string>
    <string name="enviar_resultados">Enviar Resultados</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="pinche_en_la_imagen">Pinche en la imagen</string>
</resources>
