<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".MuestraMeckeActivity">

    <ImageView
        android:id="@+id/imagen_mecke"
        android:layout_width="0dp"
        android:layout_height="363dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="19dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/tv_mecke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_base" />

    <TextView
        android:id="@+id/tv_mecke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="112dp"
        android:text="@string/muestra_mecke"
        android:textAlignment="center"
        android:textColor="@color/primaryLightColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_enviar_mec"
        app:layout_constraintStart_toStartOf="@+id/rg_mec"
        app:layout_constraintTop_toBottomOf="@+id/imagen_mecke" />

    <RadioGroup
        android:id="@+id/rg_mec"
        android:layout_width="145dp"
        android:layout_height="85dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/btnMandelin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen_mecke">

        <RadioButton
            android:id="@+id/meckeRGB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/mecke_nr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/no_reaction" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_enviar_mec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/registrar_muestra"
        app:layout_constraintBottom_toTopOf="@+id/btnMandelin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mecke" />

    <Button
        android:id="@+id/btnMandelin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/pasar_a_mandelin"
        app:layout_constraintBottom_toTopOf="@+id/btnMecVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_enviar_mec" />

    <Button
        android:id="@+id/btnMecVolver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="49dp"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMandelin" />

</android.support.constraint.ConstraintLayout>