<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MuestraMandelinActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="166dp"
        android:layout_height="20dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="40dp"
        android:text="@string/muestra_mandelin"
        android:textAlignment="center"
        android:textColor="@color/primaryLightColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imagen4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagen4"
        android:layout_width="272dp"
        android:layout_height="251dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/rg_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/img_base" />

    <RadioGroup
        android:id="@+id/rg_me"
        android:layout_width="145dp"
        android:layout_height="85dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/btnResultados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen4">

        <RadioButton
            android:id="@+id/meckeRGB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton"
            android:textAlignment="viewStart" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/me_nr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/no_reaction" />

    </RadioGroup>

    <Button
        android:id="@+id/btnResultados"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/pasar_a_simon"
        app:layout_constraintBottom_toTopOf="@+id/btnManVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_me" />

    <Button
        android:id="@+id/btnManVolver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="73dp"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResultados" />

</android.support.constraint.ConstraintLayout>