<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".CamaraActivity">

    <TextView
        android:id="@+id/txtGestion"
        android:layout_width="244dp"
        android:layout_height="0dp"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="12dp"
        android:text="@string/gestionar_imagen"
        android:textAlignment="center"
        android:textColor="@color/primaryLightColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="123dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <!--app:srcCompat="@drawable/img_base"-->

    <Button
        android:id="@+id/btnTest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="114dp"
        android:text="@string/pasar_a_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="66dp"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen" />

    <ImageButton
        android:id="@+id/cargar"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_camera_alt_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/info"
        app:layout_constraintEnd_toStartOf="@+id/info"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/info" />

    <ImageButton
        android:id="@+id/info"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginTop="430dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/ic_info_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cargar"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>